[gd_scene load_steps=6 format=3 uid="uid://dqlthqy30gb5l"]

[ext_resource type="Script" uid="uid://bnvn437x18vg7" path="res://scripts/scenes/app.gd" id="1_awiwq"]
[ext_resource type="Script" uid="uid://ca2r0vf2xtwbl" path="res://scripts/resize_container.gd" id="2_k6d74"]
[ext_resource type="Script" uid="uid://xakxyv1r778s" path="res://scripts/mod_container.gd" id="3_ljqyw"]
[ext_resource type="Texture2D" uid="uid://8e2e5qomsykk" path="res://icon.svg" id="4_jv7dx"]
[ext_resource type="Script" uid="uid://dpd2swr8axe5n" path="res://scripts/menu_bar.gd" id="5_6qkjt"]

[node name="App" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_awiwq")
metadata/_edit_lock_ = true

[node name="PathDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="ErrorPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Error!"
initial_position = 1
size = Vector2i(393, 106)
popup_window = true
dialog_text = "You have not set the path for Hotline Miami 2!
Go to Edit > Change Hotline Miami 2 Path"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
offset_top = 31.0
offset_right = 1152.0
offset_bottom = 648.0
split_offset = 325
script = ExtResource("2_k6d74")

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Mods" type="Tree" parent="HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="ModInfo" type="PanelContainer" parent="HSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
mouse_filter = 2
script = ExtResource("3_ljqyw")
metadata/_custom_type_script = "uid://xakxyv1r778s"

[node name="Cover" type="TextureRect" parent="HSplitContainer/ModInfo"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_jv7dx")

[node name="Name" type="Label" parent="HSplitContainer/ModInfo"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 32
text = "Invalid mod"
horizontal_alignment = 1

[node name="Description" type="Label" parent="HSplitContainer/ModInfo"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Invalid description"
vertical_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="HBoxContainer" parent="HSplitContainer/ModInfo"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="Apply" type="Button" parent="HSplitContainer/ModInfo/Buttons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Enable"

[node name="Remove" type="Button" parent="HSplitContainer/ModInfo/Buttons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Disable"

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 31.0
script = ExtResource("5_6qkjt")

[node name="File" type="MenuButton" parent="MenuBar"]
layout_mode = 0
offset_left = 8.0
offset_right = 75.0
offset_bottom = 31.0
text = "File"
item_count = 2
popup/item_0/text = "New Mod"
popup/item_0/id = 0
popup/item_1/text = "Reload List"
popup/item_1/id = 1

[node name="Edit" type="MenuButton" parent="MenuBar"]
layout_mode = 0
offset_left = 88.0
offset_right = 155.0
offset_bottom = 31.0
text = "Edit"
item_count = 3
popup/item_0/text = "Change mod data"
popup/item_0/id = 0
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "Change Hotline Miami 2 Path"
popup/item_2/id = 2

[connection signal="dir_selected" from="PathDialog" to="MenuBar" method="_on_hlm_2_path_dialog_dir_selected"]
[connection signal="item_selected" from="HSplitContainer/ScrollContainer/Mods" to="." method="_on_mods_item_selected"]
